// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer should render arguments 1`] = `
<div
  className="root"
>
  <Styled(Argument)
    description="Converts foo to bar"
    key="Foo"
    name="Foo"
    type={
      Object {
        "name": "Array",
      }
    }
  />
  <Styled(Argument)
    key="Foo"
    name="Foo"
  />
</div>
`;

exports[`renderer should render heading 1`] = `
<div
  className="root"
>
  <h5
    className="heading"
  >
    Arguments
  </h5>
  <Styled(Argument)
    key="Foo"
    name="Foo"
  />
</div>
`;
